# authsock-warden

./: CHANGELOG.md  Cargo.toml  README.md  justfile
.claude/: settings.json
.claude/rules/: runbooks.md
.github/workflows/: ci.yml  release.yml
docs/: TODO.md  design.md  macos-tcc-fda.md
docs/decisions/: DR-001-language-choice.md  DR-002-new-repo-vs-rename.md  DR-003-pubkey-itemid-mapping.md  DR-004-op-cli-session-caching.md  DR-005-key-source-abstraction.md  DR-006-key-lifecycle-4states.md  DR-007-refresh-flow.md  DR-008-policy-merge-strategy.md  DR-009-auth-method-command-first.md  DR-010-source-group-design.md  DR-011-op-key-discovery-strategy.md  DR-012-app-bundle-wrapper.md  DR-013-homebrew-formula-cask.md  DR-014-macos-fda-tcc.md  DR-015-rsa-pkcs8-signing.md  DR-016-cli-args-config-skip-and-fda-retry.md  DR-017-process-chain-audit-logging.md  DR-018-kv-cache-warden.md  INDEX.md
docs/issue/: 2026-05-09-migrate-to-bump-semver-and-just-ci.md
docs/research/: 2026-04-02-1password-ssh-agent-pubkey-comment.md  2026-04-02-1password-ssh-features.md  2026-04-02-op-cli-touchid-caching.md  2026-04-02-op-secret-reference-syntax.md  2026-04-02-ssh-agent-protocol-pubkey-format.md
docs/runbooks/: release-notarization-403.md
examples/: config-full.toml  config-minimal.toml
src/: error.rs  lib.rs  main.rs
src/agent/: mod.rs  proxy.rs  server.rs  upstream.rs  warden_proxy.rs
src/cli/: args.rs  exit_code.rs  mod.rs
src/config/: file.rs  mod.rs
src/filter/: comment.rs  evaluator.rs  fingerprint.rs  github.rs  keyfile.rs  keytype.rs  (+3 more)
tests/: e2e_proxy_test.rs
(+27 files in other folders)
